<project xmlns="http://maven.apache.org/POM/4.0.0" 
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>io.github.veragotze</groupId>
  <artifactId>simplu-germany</artifactId>
  <packaging>jar</packaging>
  <version>1.0-SNAPSHOT</version>
  <name>simplu-germany</name>
  <url>https://github.com/SimPLU3D/simplu-germany</url>

  <dependencies>
    <dependency>
      <groupId>io.github.ignf</groupId>
      <artifactId>librjmcmc4j-geometry</artifactId>
      <version>1.2.2</version>
    </dependency>
    <dependency>
      <groupId>io.github.ignf</groupId>
      <artifactId>simplu3d</artifactId>
      <version>1.4</version>
      <exclusions>
        <exclusion>
          <artifactId>geoxygene-sig3d-gui</artifactId>
          <groupId>io.github.ignf</groupId>
        </exclusion>
        <exclusion>
          <groupId>org.eclipse.emf</groupId>
          <artifactId>org.eclipse.emf.common</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
    <dependency>
      <artifactId>geoxygene-sig3d-gui</artifactId>
      <groupId>io.github.ignf</groupId>
      <version>1.10.1</version>
      <exclusions>
        <exclusion>
          <artifactId>citygml4j</artifactId>
          <groupId>org.citygml4j</groupId>
        </exclusion>
      </exclusions>
    </dependency>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.javassist</groupId>
      <artifactId>javassist</artifactId>
      <version>3.30.2-GA</version>
    </dependency>
    <dependency>
      <groupId>org.citygml4j</groupId>
      <artifactId>citygml4j-xml</artifactId>
      <version>3.2.4</version>
    </dependency>
  </dependencies>
  <repositories>
    <repository>
      <id>central</id>
      <url>https://repo.maven.apache.org/maven2</url>
    </repository>
		<repository>
		  <id>osgeo</id>
			<name>Open Source Geospatial Foundation Repository</name>
			<url>https://repo.osgeo.org/repository/release/</url>
		  <snapshots><enabled>false</enabled></snapshots>
		  <releases><enabled>true</enabled></releases>
		</repository>
    <!-- <repository>
      <id>simplu3d-rules</id>
      <url>https://maven.pkg.github.com/SimPLU3D/simplu3D-rules</url>
    </repository>
    <repository>
      <id>simplu3d</id>
      <url>https://maven.pkg.github.com/SimPLU3D/simplu3D</url>
    </repository> -->
    <repository>
      <id>geoxygene</id>
      <url>https://raw.githubusercontent.com/IGNF/geoxygene/refs/heads/master/geoxygene-sig3d-gui/repository/</url>
      <releases>
        <enabled>true</enabled>
        <updatePolicy>always</updatePolicy>
      </releases>
      <snapshots>
        <enabled>true</enabled>
        <updatePolicy>always</updatePolicy>
      </snapshots>
    </repository> 
  </repositories>
  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.8.1</version>
        <configuration>
          <source>17</source>
          <target>17</target>
        </configuration>
      </plugin>      
    </plugins>
  </build>
  <profiles>
    		<profile>
			<id>lin64</id>
			<activation>
        <activeByDefault>true</activeByDefault>
			</activation>
			<build>
				<plugins>
          <plugin>
            <groupId>org.codehaus.mojo</groupId>
            <artifactId>exec-maven-plugin</artifactId>
            <version>3.3.0</version>
            <configuration>
                <!-- <mainClass>io.github.veragotze.App</mainClass> -->
                <mainClass>io.github.veragotze.ExportAsCityGML</mainClass>
  							<commandlineArgs>-Djava.library.path=${project.basedir}/../simplu3D/lib/native_libraries/linux-amd64</commandlineArgs>
            </configuration>
        </plugin>
				</plugins>
			</build>
		</profile>
  </profiles>

  <dependencyManagement>
  

    <dependencies>

      <dependency>
        <groupId>org.glassfish.jaxb</groupId>
        <artifactId>jaxb-runtime</artifactId>
        <version>2.4.0-b180830.0438</version>
      </dependency>


      <dependency>
        <groupId>javax.xml.bind</groupId>
        <artifactId>jaxb-api</artifactId>
        <version>2.4.0-b180830.0359</version>
      </dependency>


      <dependency>
        <groupId>junit</groupId>
        <artifactId>junit</artifactId>
        <version>4.13.2</version>
      </dependency>

    

      <dependency>
        <groupId>com.sun.xml.bind</groupId>
        <artifactId>jaxb-impl</artifactId>
        <version>4.0.5</version>
      </dependency>

    </dependencies>

  </dependencyManagement>
</project>
